--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 services:
+  client:
+    container_name: react-client
+    build: ./client
+    ports:
+      - "5001:5001"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    restart: unless-stopped
 
-  backend:
+  bikelane-backend:
     container_name: bikelane-backend
     build: ./backend
     ports:
-      - "4000:4000"
+      - "5002:5002"
     environment:
       DB_HOST: mysql
       DB_USER: root
