--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
-  react-frontend:
-    container_name: bikelane-frontend_react
-    build: ./client
-    ports:
-      - "5001:5001"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    restart: unless-stopped
+#  react-frontend:
+#    container_name: bikelane-frontend_react
+#    build: ./client
+#    ports:
+#      - "5001:5001"
+#    environment:
+#      - CHOKIDAR_USEPOLLING=true
+#    volumes:
+#      - ./client:/app
+#      - /app/node_modules
+#    restart: unless-stopped
 
   bikelane-backend:
     container_name: bikelane-backend_express
